--- a/css/style.css
+++ b/css/style.css
@@ -641,7 +641,7 @@ section{
 	text-transform: uppercase;
 	left: -5px;
 }
-.main_title h3:after{
+.main_title h3:after {
 	content: '';
 	position: absolute;
 	bottom: 0;
@@ -649,6 +649,10 @@ section{
 	width: 200px;
 	height: 10px;
 	background-color: #000;
+}
+
+.main_title h4 {
+	color: blue;
 }
 .main_title h3{
 	margin-bottom: 43px;
